Se agrega párrafo con comentario..

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="container">
         <h1>Proyecto Tarjetas en HTML</h1>
+        <p>Este párrafo será el cambio que voy a subir a GIT</p>
     </div>
 </body>
 </html>
