--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="container">
         <h1>Proyecto Tarjetas en HTML</h1>
         <p>Este párrafo será el cambio que voy a subir a GIT</p>
+        <p>otro cambio</p>>
     </div>
 </body>
 </html>
